# tgcf

./: .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.min  Dockerfile.minimal  LICENSE  Makefile  Procfile  README.md  action.yml  app.json  config.ini  config.py  forward.py  forwarder.py  get_chat_id.py  get_chat_info.py  mkdocs.yml  pyproject.toml  requirements.txt  run_chat_info.py  runtime.txt  settings.py
.do/: deploy.template.yaml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/archives/: readme_old.md
.github/archives/tgcf_0.2_wiki/: CLI-Usage.md  Deploy-to-Digital-Ocean.md  Deploy-to-Heroku.md  Environment-Variables.md  Flood-wait-errors-and-bans.md  Format-text-before-sending-to-destination.md  Home.md  How-to-configure-tgcf-?.md  How-to-use--watermarking-?.md  How-to-use-filters-?.md  How-to-write-a-plugin-for-tgcf-?.md  Install-and-run-using-docker.md  Install-from-source.md  Login-with-a-bot-or-user-account.md  Past-vs-Live-modes-explained.md  Plugins.md  Run-for-free-on-Gitpod.md  Run-on-Android-using-Termux.md  Run-on-Google-Cloud.md  Run-on-PythonAnywhere.md  Run-tgcf-in-past-mode-periodically.md  Run-tgcf-on-Windows.md  Text-Replacement-feature-explained.md  Using-bot-accounts.md  Using-with-systemctl.md  You-can-do-OCR.md  _Footer.md  _Sidebar.md
.github/workflows/: codeql-analysis.yml  publish.yml  quality.yml
docs/: cli_usage.md  generate.py
plugins/tgcf_filter/: __init__.py
plugins/tgcf_format/: __init__.py
plugins/tgcf_ocr/: __init__.py
plugins/tgcf_replace/: __init__.py
plugins/tgcf_watermark/: __init__.py
scripts/: install_on_termux.sh
src/tgcf/: cli.py  config.py  live.py  past.py  plugins.py  utils.py
tests/: test_config.py  test_const.py  test_tgcf.py  test_utils.py
tgcf/: __init__.py  cli.py  config.py  const.py  forwarder.py  live.py  main.py  past.py  plugin_models.py  plugins.py  settings.py  storage.py  syncer.py  utils.py
tgcf/bot/: __init__.py  live_bot.py  utils.py
tgcf/extensions/: __init__.py  filters.py
tgcf/plugins/: __init__.py  caption.py  filter.py  fmt.py  format.py  gsheet_logger.py  mark.py  ocr.py  replace.py  sender.py  unique.py
tgcf/web_ui/: 0_👋_Hello.py  password.py  run.py  utils.py
tgcf/web_ui/pages/: 1_🔑_Telegram_Login.py  2_⭐_Admins.py  3_🔗_Connections.py  4_🔌_Plugins.py  5_🏃_Run.py  6_🔬_Advanced.py
