[tool.poetry]
name = "tgcf"
version = "0.2.11.post0"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/tgcf"
documentation = "https://github.com/aahnik/tgcf/wiki"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
typer = "^0.3.2"
python-dotenv = "^0.17.0"
PyYAML = "^5.4.1"
pydantic = "^1.8.1"
Telethon = "1.21.1"
cryptg = "^0.2.post2"
Pillow = "^8.1.2"
hachoir = "^3.1.2"
aiohttp = "^3.7.4"
tg-login = "^0.0.2"
"watermark.py" = "^0.0.3"
pytesseract = "^0.3.7"
rich = "^10.3.0"
pyfiglet = "^0.8.post1"
verlat = "^0.1.0"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"
black = {version = "^20.8b1", allow-prereleases = true}
isort = "^5.8.0"
pre-commit = "^2.13.0"


[tool.poetry.scripts]
tgcf = 'tgcf.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
