[tool.poetry]
name = "tgcf"
version = "1.1.8"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/tgcf"
documentation = "https://github.com/aahnik/tgcf/wiki"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = "^0.7.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
Telethon = "1.26.0"
cryptg = "^0.4.0"
Pillow = ">=9.3,<11.0"
hachoir = "^3.1.3"
aiohttp = "^3.8.3"
tg-login = "^0.0.4"
"watermark.py" = "^0.0.3"
pytesseract = "^0.3.7"
rich = "^12.6.0"
verlat = "^0.1.0"
streamlit = "^1.15.2"
PyYAML = "^6.0"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
isort = "^5.10.1"
pre-commit = "^2.20.0"


[tool.poetry.scripts]
tgcf = 'tgcf.cli:app'
tgcf-web = 'tgcf.web_ui.run:main'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
